source/blender/draw/modes/pose_mode.c
@@ -200,8 +200,7 @@ static void POSE_cache_populate(void *vedata, Object *ob)
 		}
 		if (DRW_pose_mode_armature(ob, draw_ctx->obact)) {
 			int ghost = (ob->dtx & OB_DRAWXRAY) ? 1 : 0;
-			bool transp = (ppd->transparent_bones || (ob->dt <= OB_WIRE)) ||
-			              (draw_ctx->v3d->shading.flag & XRAY_FLAG(draw_ctx->v3d)) != 0;
+			bool transp = (ppd->transparent_bones || (ob->dt <= OB_WIRE)) || XRAY_FLAG_ENABLED(draw_ctx->v3d);
 
 			DRWArmaturePasses passes = {
 			    .bone_solid = (transp) ? psl->bone_transp[ghost] : psl->bone_solid[ghost],
